<resources>
    <string name="app_name">IntentLauncher</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">About The Application</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Start Shopping</string>

    <string name="recentActivity">Your recent Activity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="buy">I want to buy...</string>
    <string name="quantity">Enter Quantity</string>
    <string name="phone">Android Phones</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log out</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_shop2">ShopActivity2</string>
</resources>
